# Oz_codingSchool

./: .gitignore
Admin_page/: index.html  join.html
JS/JS사용자정보입력받기/: get_user_info.html  get_user_info.js
JS/JS회원가입양식/: join.html  join.js
JS몬스터잡기게임/: 몬스터잡기.html
JS회원가입양식/css/: join.css
Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
chapter4/실습/: CRUD.sql  airbnb.py  airbnb_dummy.py
css채팅방만들기/: chat.css  chat.html
css프로필_스타일적용/: profile.html
database_study/Nosql/: CRUD기초연습문제.js  DB생성_Collection생성_CRUD.js
database_study/chapter2/: Untitled.csv  User.sql
database_study/chapter3/: CRUD_study.sql  data_generate.py  join.sql  schema_test1.sql
database_study/chapter4/: select_join_group_sub.sql
database_study/yes24_crawling/: analysis.ipynb  pyproject.toml  yes24_crawling.ipynb  yes24_crawling.py
database_study/yes24_crawling/database/: yes24_db.py
flask_study/: app.py  pyproject.toml
flask_study/BooksAPI/: api.py  app.py  schemas.py
flask_study/Part1/: app.py
flask_study/Part2/jsonify/: app.py
flask_study/Part2/restfulapi/: app.py
flask_study/Part2/restfulapi/resources/: item.py
flask_study/Part2/smorest/: app.py
flask_study/Part3/: app.py
flask_study/Part3/database/: db.py
flask_study/Part3/models/: board.py  user.py
flask_study/Part3/routes/: boards.py  users.py
flask_study/RestaurantReservation/: README.md  app.py
flask_study/RestaurantReservation/static/: style.css
flask_study/RestaurantReservation/templates/: edit.html  index.html
flask_study/miniproject/insta-restapi/: app.py
flask_study/miniproject/usermanagement/: app.py
git_study/: main.py
html설문조사양식/: survey.html
html자기소개페이지/Html자기소개페이지/: profile.html
python/Mini_Project_Hangman_game/: HangManGame.py  Mini_Project_Hangman.ipynb
python/banking_system/: main.py
python/chapter1/: Ch01.task.ipynb  Ch03_task.ipynb  Ch04_task(code).ipynb  (+1 more)
web_scrape/: coupang.py  melon.py  melon_dynamic.py  models.py  movie.py  naver.py  pyproject.toml
web_scrape/coupang/: cou_html.py  index.html
자료구조및알고리즘/: main.ipynb  stack.py
(+81 files in other folders)
